[package]
name = "simplog"
version = "1.2.1"
authors = ["Andrew Mackenzie <andrew@mackenzie-serres.net>"]
description = "An extremely small and simple logger to stdout/stderr, with controllable levels of verbosity"
license = "MIT"

[lib]
name = "simplog"
path = "src/lib.rs"

[dependencies.log]
version = "*"
features = ["std"]
