[package]
name = "simplog"
version = "1.3.0"
authors = ["Andrew Mackenzie <andrew@mackenzie-serres.net>"]
repository = "https://github.com/andrewdavidmackenzie/simplog"
documentation = "https://github.com/andrewdavidmackenzie/simplog/blob/master/README.md"
homepage = "https://github.com/andrewdavidmackenzie/simplog/blob/master/README.md"
description = "An extremely small and simple logger to stdout/stderr, with controllable levels of verbosity"
readme = "README.md"
license = "MIT"

[lib]
name = "simplog"
path = "src/lib.rs"

[dependencies]
termcolor = "1"

[dependencies.log]
version = "~0.4"
features = ["std"]
